# APC_2022_CARLA_POST

./: .gitignore  README.md  efficiency.py  objects.json  test.py
shell_av_ros_msgs/: CMakeLists.txt  package.xml
shell_simulation/: CMakeLists.txt  package.xml  setup.py
shell_simulation/APC_Monash/: APC_Monash.py  Movement_Control.py  ROS_Communication.py  settings.py
shell_simulation/APC_Monash_script/: APC_2022_coordinate.txt  APC_Monash.py  APC_Monash_corner.py  Coordinate_System.py  Derrick_test_route.txt  Movement_Control.py  ROS_Communication.py  efficiency.py
shell_simulation/Test_File/: APC_2022_coordinate.txt  Derrick_test_route.txt
shell_simulation/Test_File/Camera_Vision/: edge_detection.py  lane.py  lane_centering.py  object_detection.py  testing.py  vision_test.py  yolov5s.pt.txt
shell_simulation/Test_File/Scoring System/: penalty.py  score.py
shell_simulation/launch/: APC_Test.launch  shell_simulation.launch
shell_simulation/msg/: ActualCoord.msg  Score.msg
shell_simulation/old_ref/: PID_control.py  objects (APC2022).json  ori_car_control_master.py  score.py
shell_simulation/scripts/: Coordinate_System.py  Movement_Control.py  PID.py  ROS_Communication.py  car_control_master(backup Andrew).py  car_control_master.py  car_control_master_2.py  efficiency.py  ori_car_control_master.py  settings.py  test.py
shell_simulation/scripts/shell_simulation/: Coordinate_System.py  Movement_Control.py  ROS_Communication.py  settings.py
shell_simulation/scripts/shell_simulation_2/: APC_Test_Car_Control.py  Coordinate_System.py  Movement_Control.py  ROS_Communication.py  settings.py
shell_simulation/src/: APC_Monash.py  APC_Test_Car_Control.py  efficiency.py  goal_predict.py  object_detection.py  publish_score_topic.py  score.py  score_test.py
