<?xml version="1.0"?>
<package format="2">
  <name>shell_simulation</name>
  <version>0.0.0</version>
  <description>The shell_simulation package</description>

  <maintainer email="tehjayson@todo.todo">tehjayson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>python3-rosdep</depend>
  <depend>python3-rospkg</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>python3-numpy</depend>
  <depend>python3-simple-pid-pip</depend>
  <depend>python3-matplotlib</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
