<?xml version="1.0"?>
<package format="2">
  <name>shell_simulation</name>
  <version>0.0.0</version>
  <description>The shell_simulation package</description>

  <maintainer email="tehjayson@todo.todo">tehjayson</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <depend>message_runtime</depend>

  <depend>python3-rosdep</depend>
  <depend>python3-rospkg</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>python3-numpy</depend>
  <depend>python3-simple-pid-pip</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-pygame</depend>
  <depend>gitpython</depend>
  <depend>python3-ipython</depend>
  <depend>matplotlib</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>
  <depend>Pillow</depend>
  <depend>psutil</depend>
  <depend>PyYAML</depend>
  <depend>requests</depend>
  <depend>scipy</depend>
  <depend>thop</depend>
  <depend>torch</depend>
  <depend>torchvision</depend>
  <depend>tqdm</depend>
  <depend>tensorboard</depend>
  <depend>pandas</depend>
  <depend>seaborn</depend>
  <depend>setuptools</depend>
  <depend>python3-wheel</depend>
</package>
